# relational-algebra

./: Test.hs  relational-algebra.cabal
src/Database/RelationalAlgebra/: Expression.hs  Query.hs  Record.hs
src/Database/RelationalAlgebra/Interface/: Pure.hs
