Name:                relational-algebra
Version:             0.1
Synopsis:            A library that exposes a type-safe relational algebra.
Category:            Database
Author:              Paul Visschers
Build-Type:          Simple
Cabal-Version:       >=1.6.0.1
Stability:           experimental


Library
  HS-Source-Dirs:    src
  Build-Depends:     base >= 4, mtl
  Exposed-Modules:   Database.RelationalAlgebra.Record
                     Database.RelationalAlgebra.Expression
                     Database.RelationalAlgebra.Query
                     Database.RelationalAlgebra.Interface.Pure